--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -199,15 +199,13 @@ body {
     &__subtitle {
       display: none;
     }
-  
-    &__img {
+
+    &__decor-wrap {
       position: relative;
-      align-self: center;
-      width: 175px;
-      height: 252px;
-      background: no-repeat center/cover url("img/header/Mockup.png");
       margin-bottom: 5px;
-  
+      align-self: center;
+      z-index: 0;
+
       &::before {
         position: absolute;
         width: 202px;
@@ -215,7 +213,7 @@ body {
         left: -20px;
         top: 6px;
         border-radius: 50%;
-  
+
         background: linear-gradient(180deg, rgba(167, 47, 114, 0.7) 0%, rgba(255, 106, 106, 0.2) 40%, rgba(255, 106, 106, 0) 100%);
         filter: drop-shadow(0px -5px 9px rgba(0, 0, 0, 0.1));
         z-index: -1;
@@ -231,8 +229,14 @@ body {
         background: no-repeat center/cover url("img/header/E.png");
         content: "";
         opacity: 0.3;
-        z-index: -1;
+        z-index: -2;
       }
+    }
+
+    &__img {
+      width: 175px;
+      height: 252px;
+      background: no-repeat center/cover url("img/header/Mockup.png");
     }
   
     &__button {
@@ -508,7 +512,7 @@ body {
             height: 7px;
             border-radius: 5.93981px;
             background-color: #DE9B55;
-            box-shadow: 0px 1.69709px 3.39417px rgba(222, 155, 85, 0.4);
+            box-shadow: 0 1.69709px 3.39417px rgba(222, 155, 85, 0.4);
             content: "";
           }
         }
@@ -563,7 +567,7 @@ body {
       font-size: 11px;
       font-weight: 700;
       background: linear-gradient(147.62deg, #8D5DCC -128.51%, #55329E 221.38%);
-      box-shadow: 0px 5px 10px rgba(94, 56, 158, 0.35);
+      box-shadow: 0 5px 10px rgba(94, 56, 158, 0.35);
       border-radius: 3px;
       margin-bottom: 40px;
   
@@ -783,7 +787,7 @@ body {
       width: 100%;
       border: none;
       background: linear-gradient(113.3deg, #DE9B55 -8.73%, #EE5432 93.23%);
-      box-shadow: 0px 4px 4px rgba(222, 155, 85, 0.3);
+      box-shadow: 0 4px 4px rgba(222, 155, 85, 0.3);
   
       color: inherit;
       font-weight: 600;
@@ -854,7 +858,7 @@ body {
         overflow: hidden;
         object-fit: contain;
         object-position: 50% 50%;
-        background: no-repeat top left/cover url("styles/img/footer/Map.png");
+        background: no-repeat top left/cover url("img/footer/Map.png");
       }
     }
   
@@ -879,7 +883,7 @@ body {
       gap: 31px;
       .card {
         flex-basis: 280px;
-        flex-grow: 330px
+        flex-grow: 330px;
       }
     }  
 
@@ -932,10 +936,7 @@ body {
       margin-bottom: 60px;
     }
 
-    &__img {
-      width: 251px;
-      height: 381px;
-
+    &__decor-wrap {
       &::before {
         width: 302px;
         height: 302px;
@@ -945,6 +946,11 @@ body {
       &::after {
         top: 0;
       }
+    }
+
+    &__img {
+      width: 251px;
+      height: 381px;
     }
 
     &__button {
@@ -979,6 +985,14 @@ body {
     .card-step {
       padding-right: 50px;
       margin-left: 60px;
+    }
+  }
+
+  .section-4 {
+    .feedback {
+      &__title {
+        font-size: 22px;
+      }
     }
   }
 
@@ -1019,13 +1033,11 @@ body {
       margin-bottom: 150px;
     }
 
-    &__img {
+    &__decor-wrap {
       position: absolute;
       top: 60px;
       transform: translate(110%, 0);
       right: 0;
-      width: 333px;
-      height: 481px;
     
       &::before {
         display: none;
@@ -1034,9 +1046,13 @@ body {
       &::after {
         width: 100%;
         height: 100%;
-        opacity: 1;
       }
       
+    }
+
+    &__img {
+      width: 333px;
+      height: 481px;
     }
 
     &__button {
@@ -1046,14 +1062,53 @@ body {
 
   .section-4 {
     .feedback {
-      &::before {
-        width: 83px;
-        height: 83px;
-        margin-right: 40px;
-      }
-      &__button {
+      &__title {
         font-size: 18px;
       }
+      flex-wrap: nowrap;
+      margin: 0 auto;
+      width: 100%;
+      max-width: 990px;
+      background: #50386f;
+      box-shadow: none;
+      padding: 22px 240px 21px 30px;
+      &::before {
+        display: none;
+      }
+      &::after {
+        display: none;
+      }
+
+      &__button {
+        padding: 0 25px;
+        font-family: Montserrat, sans-serif;
+        position: absolute;
+        height: 100%;
+        top: 0;
+        right: 0;
+        border: none;
+        border-radius: 0;
+        width: 240px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 22px;
+        text-align: left;
+        background: linear-gradient(147.62deg, #8D5DCC -128.51%, #55329E 221.38%);
+        box-shadow: 0 5px 10px rgba(94, 56, 158, 0.35);
+
+        &::after {
+          display: inline-block;
+          width: 15px;
+          height: 15px;
+          margin-left: 15px;
+          position: relative;
+          top: 2px;
+          background: no-repeat center/contain url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.70008 1.32388C6.46583 1.32388 6.27594 1.13399 6.27594 0.899743C6.27594 0.665499 6.46583 0.475607 6.70008 0.475607L13.721 0.475606C13.8607 0.475606 13.9846 0.543134 14.0619 0.647325C14.1661 0.724602 14.2336 0.848515 14.2336 0.988207L14.2336 8.00914C14.2336 8.24338 14.0437 8.43328 13.8095 8.43328C13.5752 8.43328 13.3853 8.24338 13.3853 8.00914L13.3853 1.76378L0.753374 14.3957C0.587738 14.5614 0.31919 14.5614 0.153554 14.3957C-0.0120818 14.2301 -0.0120819 13.9616 0.153554 13.7959L12.6256 1.32388L6.70008 1.32388Z' fill='white'/%3E%3C/svg%3E%0A");
+          content: "";
+        }
+      }
+
+
     }
   }
 
@@ -1066,23 +1121,33 @@ body {
       line-height: 51px;
       margin-bottom: 92px;
     }
-
-    &__img-wrap {
+    
+    &__slider {
+      margin: 0 auto;
+    }
+    
+    .slick-current {
       z-index: 0;
+    
+      .section-5__number {
+        position: absolute;
+        top: 0;
+        right: 0;
+        font-weight: 700;
+        font-size: 19px;
+        line-height: 232px;
+        color: #EF8B54;
+        text-shadow: 5px 5px 5px rgba(239, 139, 84, 0.15);
+        z-index: -1;
+      }
+    }
+    
+    &__img {
+      width: 21vw;
+      max-width: 317px;
     }
 
-    &__number {
-      position: absolute;
-      top: 0;
-      right: 0;
-      font-weight: 700;
-      font-size: 190px;
-      line-height: 232px;
-      color: #EF8B54;
-      text-shadow: 5px 5px 5px rgba(239, 139, 84, 0.15);
-      z-index: -1;
-    }
-    }
+  }
 
 }
 
@@ -1123,13 +1188,19 @@ body {
     &__subtitle {
       display: block;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 15px;
       margin-bottom: 200px;
     }
 
     &__img {
       width: 348px;
       height: 512px;
+    }
+
+    &__button {
+      &::before {
+        content: "Выйти на связь";
+      }
     }
   }
 
@@ -1144,6 +1215,11 @@ body {
         font-weight: 400;
         font-size: 18px;
         line-height: 22px;
+      }
+
+      &__icon {
+        width: 20px;
+        height: 20px;
       }
     }
   }
@@ -1175,52 +1251,6 @@ body {
       margin-bottom: 100px;
     }
 
-    .feedback {
-      flex-wrap: nowrap;
-      margin: 0 auto;
-      width: 100%;
-      max-width: 990px;
-      background: #50386f;
-      box-shadow: none;
-      padding: 22px 240px 21px 30px;
-      &::before {
-        display: none;
-      }
-      &::after {
-        display: none;
-      }
-
-      &__button {
-        padding: 0 25px;
-        font-family: Montserrat, sans-serif;
-        position: absolute;
-        height: 100%;
-        top: 0;
-        right: 0;
-        border: none;
-        border-radius: 0;
-        width: 240px;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 22px;
-        text-align: left;
-        background: linear-gradient(147.62deg, #8D5DCC -128.51%, #55329E 221.38%);
-        box-shadow: 0px 5px 10px rgba(94, 56, 158, 0.35);
-
-        &::after {
-          display: inline-block;
-          width: 15px;
-          height: 15px;
-          margin-left: 15px;
-          position: relative;
-          top: 2px;
-          background: no-repeat center/contain url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M6.70008 1.32388C6.46583 1.32388 6.27594 1.13399 6.27594 0.899743C6.27594 0.665499 6.46583 0.475607 6.70008 0.475607L13.721 0.475606C13.8607 0.475606 13.9846 0.543134 14.0619 0.647325C14.1661 0.724602 14.2336 0.848515 14.2336 0.988207L14.2336 8.00914C14.2336 8.24338 14.0437 8.43328 13.8095 8.43328C13.5752 8.43328 13.3853 8.24338 13.3853 8.00914L13.3853 1.76378L0.753374 14.3957C0.587738 14.5614 0.31919 14.5614 0.153554 14.3957C-0.0120818 14.2301 -0.0120819 13.9616 0.153554 13.7959L12.6256 1.32388L6.70008 1.32388Z' fill='white'/%3E%3C/svg%3E%0A");
-          content: "";
-        }
-      }
-
-
-    }
   }
 
   .section-6 {
@@ -1263,7 +1293,11 @@ body {
 }
 
 @media screen and (min-width: 1440px) {
-  
+  .section-5 {
+    &__slider {
+      max-width: 1570px;
+    }
+  }
 }
 // // svg иконка меняет цвет при наведении
 // .how-we-work_item:hover {
