--- a/slick/slick-theme.scss
+++ b/slick/slick-theme.scss
@@ -99,49 +99,58 @@ $slick-opacity-not-active: 0.25 !default;
     li {
         position: relative;
         display: inline-block;
-        height: 20px;
-        width: 20px;
-        margin: 0 5px;
+        margin-right: 100px;
         padding: 0;
         cursor: pointer;
         button {
             border: 0;
             background: transparent;
-            display: block;
-            height: 20px;
-            width: 20px;
+            display: inline-block;
             outline: none;
             line-height: 0px;
             font-size: 0px;
             color: transparent;
-            padding: 5px;
             cursor: pointer;
-            &:hover, &:focus {
+        
+            &:hover,
+            &:focus {
                 outline: none;
+        
                 &:before {
                     opacity: $slick-opacity-on-hover;
                 }
             }
+        
             &:before {
-                position: absolute;
-                top: 0;
-                left: 0;
-                content: $slick-dot-character;
-                width: 20px;
-                height: 20px;
-                font-family: $slick-font-family;
-                font-size: $slick-dot-size;
-                line-height: 20px;
-                text-align: center;
-                color: $slick-dot-color;
+                font-weight: 400;
+                font-size: 18px;
+                line-height: 22px;
+                color: #FFFFFF;
+                opacity: 0.4;
                 opacity: $slick-opacity-not-active;
                 -webkit-font-smoothing: antialiased;
                 -moz-osx-font-smoothing: grayscale;
+                text-decoration: underline;
             }
         }
+        &:nth-child(1) button::before{
+            content: "Онлайн оплата";
+        }
+        &:nth-child(2) button::before{
+            
+            content: "Безопастность";
+        }
+        &:nth-child(3) {
+            margin-right: 0;
+            button::before{
+            content: "CRM & 1C";
+            }
+        }
+        
+
         &.slick-active button:before {
-            color: $slick-dot-color-active;
-            opacity: $slick-opacity-default;
+            color: #EF8B54;
+            opacity: 1;
         }
     }
 }
