--- a/slick/slick-theme.css
+++ b/slick/slick-theme.css
@@ -63,9 +63,7 @@
 .slick-dots li {
   position: relative;
   display: inline-block;
-  height: 20px;
-  width: 20px;
-  margin: 0 5px;
+  margin-right: 100px;
   padding: 0;
   cursor: pointer;
 }
@@ -73,14 +71,11 @@
 .slick-dots li button {
   border: 0;
   background: transparent;
-  display: block;
-  height: 20px;
-  width: 20px;
+  display: inline-block;
   outline: none;
   line-height: 0px;
   font-size: 0px;
   color: transparent;
-  padding: 5px;
   cursor: pointer;
 }
 
@@ -93,24 +88,35 @@
 }
 
 .slick-dots li button:before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  content: "•";
-  width: 20px;
-  height: 20px;
-  font-family: "slick";
-  font-size: 6px;
-  line-height: 20px;
-  text-align: center;
-  color: black;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  opacity: 0.4;
   opacity: 0.25;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-decoration: underline;
+}
+
+.slick-dots li:nth-child(1) button::before {
+  content: "Онлайн оплата";
+}
+
+.slick-dots li:nth-child(2) button::before {
+  content: "Безопастность";
+}
+
+.slick-dots li:nth-child(3) {
+  margin-right: 0;
+}
+
+.slick-dots li:nth-child(3) button::before {
+  content: "CRM & 1C";
 }
 
 .slick-dots li.slick-active button:before {
-  color: black;
-  opacity: 0.75;
+  color: #EF8B54;
+  opacity: 1;
 }
 /*# sourceMappingURL=slick-theme.css.map */
